--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -120,11 +120,14 @@ jobs:
           terraform init \
             -input=false
 
-          terraform apply \
-            -auto-approve \
+          terraform plan \
+            -var="CLOUDFLARE_ACCOUNT_ID=${{ steps.fetch_account_id.outputs.account_id }}" \
             -input=false
 
-          terraform apply -auto-approve -input=false
+          terraform apply \
+            -var="CLOUDFLARE_ACCOUNT_ID=${{ steps.fetch_account_id.outputs.account_id }}" \
+            -auto-approve \
+            -input=false
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
