--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    outputs:
+      account_id: ${{ steps.fetch_account_id.outputs.account_id }}
     steps:
       - uses: actions/checkout@v3
 
@@ -115,22 +117,56 @@ jobs:
           TFC_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
 
 
-      - name: Deploy using Terraform
+      - name: Initialize and Plan Terraform
         run: |
           terraform init \
             -input=false
 
           terraform plan \
-            -var="CLOUDFLARE_ACCOUNT_ID=${{ steps.fetch_account_id.outputs.account_id }}" \
-            -input=false
-
-          terraform apply \
-            -var="CLOUDFLARE_ACCOUNT_ID=${{ steps.fetch_account_id.outputs.account_id }}" \
-            -auto-approve \
             -input=false
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
+          TFC_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+        with:
+          terraform_version: 1.6.4
+
+      - name: Configure Terraform Cloud credentials
+        run: |
+          mkdir -p ~/.terraform.d
+          cat > ~/.terraform.d/credentials.tfrc.json <<EOF
+          {
+            "credentials": {
+              "app.terraform.io": {
+                "token": "${TFC_TOKEN}"
+              }
+            }
+          }
+          EOF
+        env:
+          TFC_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+
+      - name: Apply Terraform Changes
+        run: |
+          terraform init \
+            -input=false
+
+          terraform apply \
+            -auto-approve \
+            -input=false
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ needs.build.outputs.account_id }}
           TFC_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
 
       # Terraform Cloudflare provider 4.x doesn't support durable objects, provider 5.x has unresolved issues blocking the deployment. (cloudflare/terraform-provider-cloudflare#5412)
@@ -165,7 +201,7 @@ jobs:
                -d '{"observability":{"enabled":true}}'
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ needs.build.outputs.account_id }}
 
       # Currently Terraform Cloudflare provider doesn't support direct upload, use wrangler to upload instead.
       - name: Upload pages
@@ -173,4 +209,4 @@ jobs:
           npx wrangler pages deploy .vercel/output/static --project-name uptimeflare
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ needs.build.outputs.account_id }}
