Enhance deployment workflow by adding Terraform plan upload and download steps; update cron trigger schedule to run every 5 hours

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,11 +123,19 @@ jobs:
             -input=false
 
           terraform plan \
+            -out=tfplan \
             -input=false
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
           TFC_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-plan-${{ github.sha }}
+          path: tfplan
+          retention-days: 30
 
   deploy:
     needs: build
@@ -140,6 +148,12 @@ jobs:
         uses: hashicorp/setup-terraform@v2.0.3
         with:
           terraform_version: 1.6.4
+
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v3
+        with:
+          name: terraform-plan-${{ github.sha }}
+          path: .
 
       - name: Configure Terraform Cloud credentials
         run: |
@@ -163,7 +177,7 @@ jobs:
 
           terraform apply \
             -auto-approve \
-            -input=false
+            tfplan
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ needs.build.outputs.account_id }}
