--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,6 +147,15 @@ jobs:
             terraform.tfvars
           retention-days: 30
 
+      - name: Upload Built Worker
+        uses: actions/upload-artifact@v4
+        with:
+          name: built-worker-${{ github.sha }}
+          path: |
+            worker/dist/
+            .vercel/output/static/
+          retention-days: 30
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -163,6 +172,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: terraform-plan-output-${{ github.sha }}
+          path: .
+
+      - name: Download Built Worker
+        uses: actions/download-artifact@v4
+        with:
+          name: built-worker-${{ github.sha }}
           path: .
 
       - name: Configure Terraform Cloud credentials
