--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,17 +86,26 @@ jobs:
         # This is a workaround to fix Cloudflare provider 4.x import crash when there's a durable object binding.
         run: |
           # Get bindings without durable objects
-          NEW_BINDINGS=$(curl --request GET --fail-with-body \
+          RESPONSE=$(curl --silent --request GET \
                --url https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/scripts/uptimeflare_worker/settings \
                --header 'Authorization: Bearer '$CLOUDFLARE_API_TOKEN \
-               --header 'Content-Type: application/json' | jq '.result.bindings | map(select(.type != "durable_object_namespace"))' -jc)
-          echo "New bindings: $NEW_BINDINGS"
+               --header 'Content-Type: application/json')
 
-          # Remove durable objects bindings
-          curl --request PATCH --fail-with-body \
-               --url https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/scripts/uptimeflare_worker/settings \
-               --header 'Authorization: Bearer '$CLOUDFLARE_API_TOKEN \
-               -F 'settings={"bindings":'$NEW_BINDINGS'}'
+          # Check if the worker exists (success field is true)
+          SUCCESS=$(echo "$RESPONSE" | jq -r '.success // false')
+
+          if [[ "$SUCCESS" == "true" ]]; then
+            NEW_BINDINGS=$(echo "$RESPONSE" | jq '.result.bindings | map(select(.type != "durable_object_namespace"))' -jc)
+            echo "New bindings: $NEW_BINDINGS"
+
+            # Remove durable objects bindings
+            curl --request PATCH --fail-with-body \
+                 --url https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/scripts/uptimeflare_worker/settings \
+                 --header 'Authorization: Bearer '$CLOUDFLARE_API_TOKEN \
+                 -F 'settings={"bindings":'$NEW_BINDINGS'}'
+          else
+            echo "Worker does not exist yet, skipping binding removal"
+          fi
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ steps.fetch_account_id.outputs.account_id }}
